hphp/test/zend/bad/ext/posix/tests/posix_initgroups.php
<?php

var_dump(posix_initgroups('foo', 'bar'));
var_dump(posix_initgroups(NULL, NULL));

?>